--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
     background-size: cover;
     background-position: center;
   }
+.wrapper{
+  width: 100%;
+  height: 100vh;
+  background: url("7.png") no-repeat top center;
+  background-size: cover;
+}
   ul {
     float: right;
     list-style-type: none;
